New Autosmooth instant crash entering Edit Mode #39740

Closed
opened 2014-04-14 23:10:30 +02:00 by Marco G · 7 comments

System Information
Win7 64bit

Blender Version
Broken: 2.70-6e9c2d0

Short description of error
New Autosmooth give instant crash entering Edit Mode. Confirmed also on Linux on BlenderArtist.

Exact steps for others to reproduce the error

  • Add a Suzanne
  • Check Autosmooth in Item Panel
  • Shade smooth the mesh
  • Press Tab to enter Edit Mode
  • Crash

PS: with other primitives seems ok, but Suzanne and other meshes of mine crashes.

Also tested with factory settings

**System Information** Win7 64bit **Blender Version** Broken: 2.70-6e9c2d0 **Short description of error** New Autosmooth give instant crash entering Edit Mode. Confirmed also on Linux on BlenderArtist. **Exact steps for others to reproduce the error** - Add a Suzanne - Check Autosmooth in Item Panel - Shade smooth the mesh - Press Tab to enter Edit Mode - Crash PS: with other primitives seems ok, but Suzanne and other meshes of mine crashes. Also tested with factory settings
Author

Changed status to: 'Open'

Changed status to: 'Open'
Bastien Montagne was assigned by Marco G 2014-04-14 23:10:30 +02:00
Author

Added subscriber: @marcog

Added subscriber: @marcog
Author

I get crashes while tweaking the angle too, also confirmed here on Win 8.1, post #789

I get crashes while tweaking the angle too, also confirmed [here ](http://www.blenderartists.org/forum/showthread.php?318765-Blender-2-7x-development-thread&p=2624776&viewfull=1#post2624776) on Win 8.1, post #789

This issue was referenced by blender/blender-addons-contrib@3cf39fc72a

This issue was referenced by blender/blender-addons-contrib@3cf39fc72a36bab1c5b82ae96cffe7dd01ce7260

This issue was referenced by 3cf39fc72a

This issue was referenced by 3cf39fc72a36bab1c5b82ae96cffe7dd01ce7260

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3cf39fc72a.

Closed by commit 3cf39fc72a.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39740
No description provided.